--- a/app/src/main/res/layout/fragment_case_details.xml
+++ b/app/src/main/res/layout/fragment_case_details.xml
@@ -233,9 +233,17 @@
                 android:layout_marginBottom="20dp"
                 />
 
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:visibility="gone"
+                android:indeterminateTint="#80C8BFE7"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
