--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/default_blue_transparent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.Guideline
@@ -27,38 +27,65 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <ImageView
-        android:id="@+id/arrowBack"
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/circle_uncle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/horizontalUp"
+        app:layout_constraintBottom_toTopOf="@id/container"
+        android:layout_marginBottom="10dp"/>
+
+    <TextView
+        android:id="@+id/container"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:src="@drawable/baseline_arrow_back_24"
+        app:layout_constraintWidth_percent="0.9"
+        app:layout_constraintHeight_percent="0.8"
+        android:background="@drawable/profile_container"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintWidth_percent="0.09"
-        app:layout_constraintHeight_percent="0.03"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalUp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="34dp"
         />
 
     <TextView
         android:id="@+id/newUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New User"
-        android:textSize="25dp"
+        android:text="@string/new_user"
+        android:textSize="25sp"
         android:textColor="@color/default_pink"
         android:textStyle="bold|italic"
-        app:layout_constraintBottom_toBottomOf="@id/arrowBack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/arrowBack"
-        app:layout_constraintTop_toTopOf="@id/arrowBack" />
+        app:layout_constraintEnd_toEndOf="@id/container"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@+id/container"
+        app:layout_constraintTop_toTopOf="@id/container" />
+
+    <ImageView
+        android:id="@+id/arrowBack"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/baseline_arrow_back_24"
+        app:layout_constraintStart_toStartOf="@id/container"
+        android:layout_marginStart="8dp"
+        app:layout_constraintWidth_percent="0.09"
+        app:layout_constraintHeight_percent="0.03"
+        app:layout_constraintTop_toTopOf="@id/newUser"
+        app:layout_constraintBottom_toBottomOf="@id/newUser" />
+
     <EditText
         android:id="@+id/firstName"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/text_box"
         android:layout_marginHorizontal="20dp"
         android:hint="First Name"
         android:paddingHorizontal="50dp"
         app:layout_constraintTop_toBottomOf="@id/newUser"
+        app:layout_constraintEnd_toEndOf="@id/container"
+        app:layout_constraintStart_toStartOf="@id/container"
         android:layout_marginTop="20dp"/>
     <ImageView
         android:id="@+id/firstNameIcon"
@@ -81,12 +108,14 @@
         />
     <EditText
         android:id="@+id/lastName"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/text_box"
         android:layout_marginHorizontal="20dp"
         android:hint="Last Name"
         android:paddingHorizontal="50dp"
+        app:layout_constraintEnd_toEndOf="@id/container"
+        app:layout_constraintStart_toStartOf="@id/container"
         app:layout_constraintTop_toBottomOf="@id/firstName"
         android:layout_marginTop="15dp"/>
     <ImageView
@@ -111,13 +140,15 @@
 
     <EditText
         android:id="@+id/age"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/text_box"
         android:hint="Age"
         android:paddingHorizontal="50dp"
+        app:layout_constraintEnd_toEndOf="@id/container"
+        app:layout_constraintStart_toStartOf="@id/container"
         app:layout_constraintTop_toBottomOf="@id/lastName"
         />
     <TextView
@@ -142,7 +173,7 @@
 
     <EditText
         android:id="@+id/phone"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="15dp"
@@ -150,6 +181,8 @@
         android:hint="Phone Number"
         android:inputType="number"
         android:paddingHorizontal="50dp"
+        app:layout_constraintEnd_toEndOf="@id/container"
+        app:layout_constraintStart_toStartOf="@id/container"
         app:layout_constraintTop_toBottomOf="@id/age"
         />
     <TextView
@@ -173,13 +206,15 @@
         />
     <EditText
         android:id="@+id/email"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/text_box"
         android:hint="E-mail"
         android:paddingHorizontal="50dp"
+        app:layout_constraintEnd_toEndOf="@id/container"
+        app:layout_constraintStart_toStartOf="@id/container"
         app:layout_constraintTop_toBottomOf="@id/phone"
         />
     <TextView
@@ -203,13 +238,15 @@
         />
     <EditText
         android:id="@+id/address"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/text_box"
         android:hint="Address"
         android:paddingHorizontal="50dp"
+        app:layout_constraintEnd_toEndOf="@id/container"
+        app:layout_constraintStart_toStartOf="@id/container"
         app:layout_constraintTop_toBottomOf="@id/email"
         />
     <TextView
@@ -233,7 +270,7 @@
         />
     <EditText
         android:id="@+id/password"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginHorizontal="20dp"
@@ -241,6 +278,8 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingHorizontal="50dp"
+        app:layout_constraintEnd_toEndOf="@id/container"
+        app:layout_constraintStart_toStartOf="@id/container"
         app:layout_constraintTop_toBottomOf="@+id/address"
         />
 
@@ -273,22 +312,38 @@
         app:layout_constraintBottom_toBottomOf="@id/lock"
         android:layout_marginStart="8dp"
         />
-    <com.google.android.material.button.MaterialButton
+    <ImageButton
         android:id="@+id/btnRegister"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_margin="60dp"
-        android:layout_marginTop="58dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginHorizontal="20dp"
         android:background="@drawable/login_button"
-        android:text="Register"
-        android:textSize="20dp"
-        android:textStyle="italic|bold"
-        app:backgroundTint="@color/default_blue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintWidth_percent="0.9"
+        app:layout_constraintEnd_toEndOf="@id/container"
+        app:layout_constraintStart_toStartOf="@id/container"
+        app:layout_constraintBottom_toBottomOf="@+id/container"
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/btnRegister"
+        app:layout_constraintEnd_toEndOf="@id/btnRegister"
+        app:layout_constraintTop_toTopOf="@id/btnRegister"
+        app:layout_constraintBottom_toBottomOf="@id/btnRegister"
+        android:text="@string/register"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="italic|bold"/>
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        android:indeterminateTint="#80C8BFE7"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
