--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -44,6 +44,7 @@
         android:textSize="22sp"
         android:textStyle="bold|italic"
         android:fontFamily="@font/poppins_black"
+        android:textColor="@color/grey"
         app:layout_constraintBottom_toBottomOf="@id/arrow_back"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/arrow_back"
