--- a/app/src/main/res/layout/fragment_slot_selection.xml
+++ b/app/src/main/res/layout/fragment_slot_selection.xml
@@ -14,6 +14,20 @@
         />
 
     <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/blue_bg"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/pink_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <ImageView
         android:id="@+id/arrowBack"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -29,9 +43,10 @@
         android:id="@+id/newUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/pick_a_date"
+        android:text="@string/pick_a_slot"
         android:textStyle="bold|italic"
         android:textSize="22sp"
+        android:textColor="@color/grey"
         android:fontFamily="@font/poppins_black"
         app:layout_constraintBottom_toBottomOf="@id/arrowBack"
         app:layout_constraintEnd_toEndOf="parent"
@@ -47,9 +62,9 @@
 
     <TextView
         android:id="@+id/tv_selected_date"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
+        android:layout_marginHorizontal="15dp"
         android:layout_marginTop="35dp"
         android:background="@drawable/text_box"
         android:paddingHorizontal="10dp"
@@ -61,31 +76,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/arrowBack" />
 
-    <TextView
-        android:id="@+id/btn_open_date_picker"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginHorizontal="20dp"
-        android:background="@drawable/baseline_edit_calendar_24"
-        app:backgroundTint="@color/default_blue"
-        app:layout_constraintTop_toTopOf="@id/tv_selected_date"
-        app:layout_constraintStart_toEndOf="@id/tv_selected_date"
-        app:layout_constraintBottom_toBottomOf="@id/tv_selected_date"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/select_first"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/select_a_date_to_show_the_available_slots"
-        app:layout_constraintTop_toBottomOf="@id/btn_open_date_picker"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
-        android:textColor="@color/default_pink"
-        android:textStyle="bold|italic"
-        android:textSize="15sp"/>
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_slots"
         android:layout_width="match_parent"
@@ -93,7 +83,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
         android:layout_marginHorizontal="8dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_open_date_picker"
+        app:layout_constraintTop_toBottomOf="@id/tv_selected_date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_confirm" />
@@ -125,4 +115,15 @@
         app:backgroundTint="@color/default_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
+        android:indeterminateTint="#80C8BFE7"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
