--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Clinic" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Clinic" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/default_pink_transparent</item>
+        <item name="colorPrimaryVariant">@color/default_blue_transparent</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/default_pink</item>
+        <item name="colorSecondaryVariant">@color/default_pink</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
 </resources>
