--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color> <color name="purple_700">#FF3700B3</color> <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
     <color name="default_blue">#426BAE</color>
     <color name="default_blue_transparent">#80426BAE</color>
     <color name="default_pink">#C53B84</color>
@@ -9,4 +14,5 @@
     <color name="pink">#EAA0C2</color>
     <color name="purple">#A701C8</color>
     <color name="purple2_transparent">#803F47CC</color>
+    <color name="grey">#7D7D7D</color>
 </resources>
