--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Clinic" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Clinic" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/default_pink_transparent</item>
+        <item name="colorPrimaryVariant">@color/default_blue_transparent</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/default_pink</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
 
     <style name="Theme.Clinic" parent="Base.Theme.Clinic" />
