--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="purple">#A701C8</color>
     <color name="purple2_transparent">#803F47CC</color>
     <color name="grey">#7D7D7D</color>
+    <color name="yellow_star">#FFD700</color>
 </resources>
