--- a/app/src/main/res/layout/fragment_b_feedback.xml
+++ b/app/src/main/res/layout/fragment_b_feedback.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
-    android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontalUp"
@@ -29,7 +29,7 @@
         android:id="@+id/newUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/your_appointments"
+        android:text="@string/all_feedbacks"
         android:textStyle="bold|italic"
         android:textSize="25sp"
         android:textColor="@color/grey"
@@ -48,17 +48,30 @@
         android:layout_marginHorizontal="30dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/booked_slots"
+        android:id="@+id/feedbacks_recycler"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:listitem="@layout/item_booked"
         android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintTop_toBottomOf="@id/line"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toTopOf="@id/add_new_feedback" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/add_new_feedback"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/add"
+        app:backgroundTint="@color/default_pink"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"/>
 
     <ProgressBar
+        android:id="@+id/in_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -66,6 +79,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:visibility="gone"
-        android:indeterminateTint="#80C8BFE7"/>
+        android:indeterminateTint="@color/default_pink"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
