--- a/app/src/main/res/layout/fragment_b_login.xml
+++ b/app/src/main/res/layout/fragment_b_login.xml
@@ -206,6 +206,7 @@
         android:textColor="@color/default_pink"/>
 
     <ProgressBar
+        android:id="@+id/in_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -213,6 +214,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:visibility="gone"
-        android:indeterminateTint="#80C8BFE7"/>
+        android:indeterminateTint="@color/default_pink"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
