--- a/app/src/main/res/layout/fragment_doctor_all_common_questions.xml
+++ b/app/src/main/res/layout/fragment_doctor_all_common_questions.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontalUp"
@@ -15,26 +15,13 @@
         />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/blue_bg"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/pink_bg"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
         android:id="@+id/arrowBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:importantForAccessibility="no"
-        android:background="@drawable/baseline_arrow_back_24"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/baseline_arrow_back_24"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_percent="0.09"
+        app:layout_constraintHeight_percent="0.03"
         app:layout_constraintTop_toBottomOf="@+id/horizontalUp"
         />
 
@@ -42,10 +29,10 @@
         android:id="@+id/newUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/all_bookings"
-        android:fontFamily="@font/poppins_black"
+        android:text="@string/all_questions"
         android:textStyle="bold|italic"
         android:textSize="25sp"
+        android:textColor="@color/grey"
         app:layout_constraintBottom_toBottomOf="@id/arrowBack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/arrowBack"
@@ -60,41 +47,29 @@
         android:layout_marginTop="10dp"
         android:layout_marginHorizontal="30dp"/>
 
-    <TextView
-        android:id="@+id/calender"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@drawable/baseline_edit_calendar_24"
-        app:layout_constraintTop_toBottomOf="@id/line"
-        android:layout_marginVertical="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="20dp"/>
-
-    <TextView
-        android:id="@+id/today"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/bookings_of_today"
-        android:textSize="16sp"
-        android:textColor="@color/default_pink"
-        android:textStyle="italic"
-        android:fontFamily="@font/poppins_light"
-        app:layout_constraintTop_toTopOf="@id/calender"
-        app:layout_constraintBottom_toBottomOf="@id/calender"
-        android:layout_marginVertical="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginStart="20dp"/>
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/booked_slots"
+        android:id="@+id/rv_questions"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:listitem="@layout/item_booked_doctor"
-        android:layout_marginTop="20dp"
-        app:layout_constraintTop_toBottomOf="@id/calender"
+        android:padding="8dp"
+        android:layout_marginTop="15dp"
+        app:layout_constraintTop_toBottomOf="@id/line"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/item_faq_question" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/add_new_question"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="@drawable/add"
+        app:backgroundTint="@color/default_pink"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"/>
+
 
     <ProgressBar
         android:id="@+id/in_progress"
