--- a/app/src/main/res/layout/fragment_doctor_case_details.xml
+++ b/app/src/main/res/layout/fragment_doctor_case_details.xml
@@ -234,6 +234,7 @@
                 />
 
             <ProgressBar
+                android:id="@+id/in_progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
@@ -241,7 +242,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:visibility="gone"
-                android:indeterminateTint="#80C8BFE7"/>
+                android:indeterminateTint="@color/default_pink"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
