--- a/app/src/main/res/layout/fragment_patient_home_2.xml
+++ b/app/src/main/res/layout/fragment_patient_home_2.xml
@@ -192,6 +192,39 @@
                     android:fontFamily="@font/poppins_black"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp">
+
+                <TextView
+                    android:id="@+id/for_you"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/welcome_top"
+                    android:backgroundTint="#C8BFE7"
+                    android:drawableStart="@drawable/sporting_pregnant"
+                    android:paddingStart="10dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/for_you"
+                    android:textSize="20sp"
+                    android:textColor="@color/black"
+                    app:layout_constraintEnd_toEndOf="@id/for_you"
+                    app:layout_constraintTop_toTopOf="@id/for_you"
+                    app:layout_constraintBottom_toBottomOf="@id/for_you"
+                    app:layout_constraintStart_toStartOf="@id/for_you"
+                    android:layout_marginStart="140dp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/poppins_black"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
         </LinearLayout>
     </ScrollView>
 
